syntax = "proto3";

package tensorflow.serving;

import "tf_models/syntaxnet/syntaxnet/sentence.proto";

message ParseyRequest {
  repeated string text = 1;
};

message ParseyResponse {
  repeated syntaxnet.Sentence result = 1;
};
